Exp-2/output/hf-eval-data-v3-reuslt-7b-eval/f00554_detect_intruder.err
  File "./f00554_detect_intruder.py", line 60
    def test_detect_intruder():
    ^
SyntaxError: invalid syntax
